# solid-server-rs

./: .gitignore  .roborev.toml  Cargo.toml  LICENSE-MIT  README.md  deny.toml  docker-compose.yml  rustfmt.toml  suite.json
bench/: ACL-CACHE.md  AUTH-BASELINE.md  BASELINE.md  HTTP2-BACKPRESSURE.md  P1-QUICKWINS.md  README.md  ROUND-C-ALLOC.md  ROUND1.md  ROUND3.md  ROUND4-PROFILE.md  SKIP-CRYPTO.md  ab-drive.sh  ab-listing.sh  active-split.py  analyze-prof.py  callers.py  categorize.py  gen-cert.sh  our-frames.py  profile-auth.sh  profile-run.sh  run-auth.sh  run-skip-crypto.sh  run.sh  symbolicate.py
conformance/: README.md  SCORE.md  run.sh
conformance/config/: application.yaml  solid-server-rs.env  test-subjects.ttl
conformance/tls/: san.cnf  server-cert.pem  server-key.pem
decisions/: 0001-embed-sparq-in-process.md  0002-skip-crypto-when-identity-independent.md  0003-existence-non-disclosure.md
examples/: acl_cache_bench.rs  auth_hotpath_microbench.rs  auth_load.rs  iri_guard_microbench.rs  read_response_alloc_microbench.rs
src/: acl_cache.rs  app.rs  auth.rs  auth_cache.rs  error.rs  lib.rs  main.rs  overload.rs  rate_limit.rs  redis_replay.rs  seed.rs  tls.rs  transport.rs
src/authz/: acl.rs  mod.rs  mode.rs  wac.rs  wac_allow.rs
src/ldp/: conditional.rs  content.rs  cors.rs  handler.rs  mod.rs  patch.rs  public_read_skip.rs  range.rs  target.rs
src/notifications/: activity.rs  mod.rs  ws.rs
src/store/: blob.rs  embedded.rs  http.rs  mod.rs  reconcile.rs  sparq.rs  sparql.rs
tests/: auth_cache_integration.rs  auth_middleware.rs  h2_rate_limit.rs  http_sparq_client.rs  ldp_http.rs  ldp_target.rs  notifications_http.rs  overload_http.rs  public_read_skip.rs  rate_limit_http.rs  redis_replay.rs  store.rs  store_embedded.rs  tls_handshake.rs  transport_dos.rs
tests/common/: mod.rs
tests/fixtures/: test-ca.pem  test-cert.pem  test-key.pem
