[package]
name = "solid-server-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "EXPERIMENTAL parallel-track Rust reimplementation of a Solid/LDP server. SPARQ-authoritative for RDF + access-control; object_store/S3 backup-only for bytes. Does NOT replace the TypeScript prod-solid-server."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeswr/solid-server-rs"
homepage = "https://github.com/jeswr/solid-server-rs"
keywords = ["solid", "ldp", "rdf", "sparq", "server"]
categories = ["web-programming::http-server"]
readme = "README.md"
publish = false

[dependencies]
# HTTP framework: axum on hyper 1.x + tokio (spike §4). The closest structural analogue to the
# framework-agnostic LDP handler seam in prod-solid-server.
axum = "0.8"
# `time` is required by the M3 HttpSparqClient's per-request `tokio::time::timeout` (do NOT rely on
# a transitive enable — that's fragile under feature-unification changes).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
# tower-http middleware layer set (spike §4). M2 wires in CORS/security-headers/trace/body-limit.
tower = "0.5"
tower-http = { version = "0.7", features = ["trace"] }
# TLS: rustls + aws-lc-rs (spike §4 — the house rule, FIPS-capable backend).
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
# Auth: consume the standalone DPoP/Solid-OIDC verifier as a git dependency — do NOT reimplement.
# The verifier's M2 landed the DNS-pinned SSRF-guarded network adapters (`NetworkJwksProvider` +
# `NetworkWebIdResolver` over `SafeFetcher`); we enable its `network` feature so the binary performs
# REAL OIDC discovery / JWKS fetch / WebID resolution against the live IdP. The middleware itself
# stays issuer-agnostic + seam-based, so unit tests still drive the verification CORE via the
# in-memory test doubles. Pinned to an exact rev (not the floating default branch) for reproducible,
# security-reviewable builds; Cargo.lock is committed.
# FOLLOW-UP: re-pin after the in-flight `fl9` SSRF change lands a new verifier rev (and re-pin to a
# tagged release once the verifier cuts one).
solid-oidc-verifier = { git = "https://github.com/jeswr/solid-oidc-verifier", rev = "6f1b91cf267984ca344af6366684f42803f15472", features = ["network"] }
# RDF parse/serialise: oxttl (Turtle/N-Triples) + oxjsonld (JSON-LD ↔ RDF), via oxrdf model (spike §4).
# oxttl 0.2 + oxjsonld 0.2 both pin `oxrdf =0.3.3`, so this is a coherent Oxigraph set.
oxrdf = "0.3"
oxttl = "0.2"
oxjsonld = "0.2"
# Blob storage seam: object_store gives one trait over S3/GCS/Azure/Local (spike §4).
object_store = "0.13"
# Async trait support for the Store / SparqClient / BlobStore seams.
async-trait = "0.1"
bytes = "1"
http = "1"
# Live SPARQ HTTP client (M3): a SPARQL 1.1 Protocol client over the SPARQ /sparql endpoint. Built
# on the hyper 1.x client + hyper-util's legacy pooled Client — both ALREADY in the tree (axum +
# the verifier pull them in), so this adds NO new crates, only enables already-resolved client
# features. Plain HTTP to a trusted internal endpoint; TLS is an M3-next adapter behind the same type.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Mint test JWS access tokens + DPoP proofs for the auth-middleware unit tests (mirrors the
# verifier crate's own test helpers — ES256 keys + RFC 7638 thumbprint).
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
sha2 = "0.10"
serde_json = "1"
# The HttpSparqClient unit tests run against an in-process mock SPARQL endpoint (an axum server on a
# tokio listener) — no live SPARQ. `net` for the listener, `rt-multi-thread` so the client + server
# run on the same multi-threaded runtime, `time` for the timeout test.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
http-body-util = "0.1"

[features]
default = []
