[package]
name = "solid-server-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "EXPERIMENTAL parallel-track Rust reimplementation of a Solid/LDP server. SPARQ-authoritative for RDF + access-control; object_store/S3 backup-only for bytes. Does NOT replace the TypeScript prod-solid-server."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeswr/solid-server-rs"
homepage = "https://github.com/jeswr/solid-server-rs"
keywords = ["solid", "ldp", "rdf", "sparq", "server"]
categories = ["web-programming::http-server"]
readme = "README.md"
publish = false

[dependencies]
# HTTP framework: axum on hyper 1.x + tokio (spike §4). The closest structural analogue to the
# framework-agnostic LDP handler seam in prod-solid-server. The `ws` feature enables the
# WebSocketChannel2023 notification receive endpoint (axum's WebSocket upgrade); it pulls in
# tokio-tungstenite + sha1 + base64 as transitive deps OF axum (no NEW top-level crate).
axum = { version = "0.8", features = ["ws"] }
# `time` is required by the M3 HttpSparqClient's per-request `tokio::time::timeout`; `fs` is required
# by `tls::read_pem`'s `tokio::fs::read`; `sync` is required by the notifications hub's
# `broadcast`/`Mutex` (the per-topic subscription fan-out). Declare them directly — do NOT rely on a
# transitive enable, which is fragile under feature-unification changes.
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
# tower-http middleware layer set (spike §4). M2 wires in CORS/security-headers/trace/body-limit.
tower = "0.5"
tower-http = { version = "0.7", features = ["trace"] }
# TLS: rustls + aws-lc-rs (spike §4 — the house rule, FIPS-capable backend).
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
# HTTPS serving: axum-server is the maintained, widely-used (26M+ downloads) axum/hyper TLS-serving
# path. We take the `tls-rustls-no-provider` feature (NOT `tls-rustls`) deliberately: that variant
# does NOT activate its own `rustls/aws-lc-rs` provider — it reuses the process-wide default crypto
# provider, which `main` already installs (aws-lc-rs) for the SSRF-guarded fetcher. So there is one
# provider in the tree, no double-install conflict, and TLS termination stays on the house rustls
# stack. PEM cert/key are loaded from file paths via `RustlsConfig::from_pem`. Config-gated: only
# linked into the serve path when both TLS env vars are set (plain TCP otherwise).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
# Auth: consume the standalone DPoP/Solid-OIDC verifier as a git dependency — do NOT reimplement.
# The verifier's M2 landed the DNS-pinned SSRF-guarded network adapters (`NetworkJwksProvider` +
# `NetworkWebIdResolver` over `SafeFetcher`); we enable its `network` feature so the binary performs
# REAL OIDC discovery / JWKS fetch / WebID resolution against the live IdP. The middleware itself
# stays issuer-agnostic + seam-based, so unit tests still drive the verification CORE via the
# in-memory test doubles. Pinned to an exact rev (not the floating default branch) for reproducible,
# security-reviewable builds; Cargo.lock is committed.
# FOLLOW-UP: re-pin after the in-flight `fl9` SSRF change lands a new verifier rev (and re-pin to a
# tagged release once the verifier cuts one).
solid-oidc-verifier = { git = "https://github.com/jeswr/solid-oidc-verifier", rev = "6f1b91cf267984ca344af6366684f42803f15472", features = ["network"] }
# RDF parse/serialise: oxttl (Turtle/N-Triples) + oxjsonld (JSON-LD ↔ RDF), via oxrdf model (spike §4).
# oxttl 0.2 + oxjsonld 0.2 both pin `oxrdf =0.3.3`, so this is a coherent Oxigraph set.
oxrdf = "0.3"
oxttl = "0.2"
oxjsonld = "0.2"
# Blob storage seam: object_store gives one trait over S3/GCS/Azure/Local (spike §4).
object_store = "0.13"
# Async trait support for the Store / SparqClient / BlobStore seams.
async-trait = "0.1"
bytes = "1"
http = "1"
# Live SPARQ HTTP client (M3): a SPARQL 1.1 Protocol client over the SPARQ /sparql endpoint. Built
# on the hyper 1.x client + hyper-util's legacy pooled Client — both ALREADY in the tree (axum +
# the verifier pull them in), so this adds NO new crates, only enables already-resolved client
# features. Plain HTTP to a trusted internal endpoint; TLS is an M3-next adapter behind the same type.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Mint test JWS access tokens + DPoP proofs for the auth-middleware unit tests (mirrors the
# verifier crate's own test helpers — ES256 keys + RFC 7638 thumbprint).
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
sha2 = "0.10"
serde_json = "1"
# The HttpSparqClient unit tests run against an in-process mock SPARQL endpoint (an axum server on a
# tokio listener) — no live SPARQ. `net` for the listener, `rt-multi-thread` so the client + server
# run on the same multi-threaded runtime, `time` for the timeout test.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"] }
http-body-util = "0.1"
# The (default-`#[ignore]`d) live TLS handshake test drives a rustls client against the axum-server
# HTTPS listener. tokio-rustls is the canonical rustls+tokio adapter and is ALREADY in the resolved
# tree (pulled in transitively by axum-server's tls-rustls feature), so this adds NO new crate —
# it only makes the existing dep nameable from the test. Matches the in-tree rustls 0.23 / aws-lc-rs.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
# The (default-`#[ignore]`d) live WebSocketChannel2023 handshake test drives a real WebSocket client
# against the bound axum `…/receive` endpoint. tokio-tungstenite is ALREADY in the resolved tree
# (pulled in by axum's `ws` feature), so naming it here adds NO new crate to the build. `futures-util`
# provides the Sink/Stream combinators (`SinkExt`/`StreamExt`) for the client socket; it too is
# already transitively present (tokio-tungstenite + axum depend on it).
tokio-tungstenite = "0.29"
futures-util = "0.3"
# The live WS test's HTTP client (subscribe POST + the PUT). reqwest is ALREADY in the resolved tree
# (the verifier's `network` feature pulls it in for OIDC/JWKS/WebID fetches), so naming it here adds
# NO new crate. Used ONLY in the default-`#[ignore]`d live test.
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = []
