[package]
name = "solid-server-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "EXPERIMENTAL parallel-track Rust reimplementation of a Solid/LDP server. SPARQ-authoritative for RDF + access-control; object_store/S3 backup-only for bytes. Does NOT replace the TypeScript prod-solid-server."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeswr/solid-server-rs"
homepage = "https://github.com/jeswr/solid-server-rs"
keywords = ["solid", "ldp", "rdf", "sparq", "server"]
categories = ["web-programming::http-server"]
readme = "README.md"
publish = false

[dependencies]
# HTTP framework: axum on hyper 1.x + tokio (spike §4). The closest structural analogue to the
# framework-agnostic LDP handler seam in prod-solid-server. The `ws` feature enables the
# WebSocketChannel2023 notification receive endpoint (axum's WebSocket upgrade); it pulls in
# tokio-tungstenite + sha1 + base64 as transitive deps OF axum (no NEW top-level crate).
axum = { version = "0.8", features = ["ws"] }
# `time` is required by the M3 HttpSparqClient's per-request `tokio::time::timeout`; `fs` is required
# by `tls::read_pem`'s `tokio::fs::read`; `sync` is required by the notifications hub's
# `broadcast`/`Mutex` (the per-topic subscription fan-out). Declare them directly — do NOT rely on a
# transitive enable, which is fragile under feature-unification changes.
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
# tower-http middleware layer set (spike §4). M2 wires in security-headers/trace/body-limit. CORS is a
# hand-rolled axum middleware (`ldp::cors`) rather than `tower-http`'s `CorsLayer`, because the Solid
# CTH asserts case-sensitive `Vary: Origin` + expose-headers on the preflight, which the layer does
# not emit out of the box — so no `cors` feature is needed here.
tower = "0.5"
# `timeout` adds the request-timeout layer (504 on a stuck request — the overload/backpressure slice).
# It only enables already-resolved deps (tokio/time is already on; http-body is in the tree), so it
# adds NO new crate — just the layer code. `trace` is the existing tracing layer.
tower-http = { version = "0.7", features = ["trace", "timeout"] }
# TLS: rustls + aws-lc-rs (spike §4 — the house rule, FIPS-capable backend).
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
# HTTPS serving: axum-server is the maintained, widely-used (26M+ downloads) axum/hyper TLS-serving
# path. We take the `tls-rustls-no-provider` feature (NOT `tls-rustls`) deliberately: that variant
# does NOT activate its own `rustls/aws-lc-rs` provider — it reuses the process-wide default crypto
# provider, which `main` already installs (aws-lc-rs) for the SSRF-guarded fetcher. So there is one
# provider in the tree, no double-install conflict, and TLS termination stays on the house rustls
# stack. PEM cert/key are loaded from file paths via `RustlsConfig::from_pem`. Config-gated: only
# linked into the serve path when both TLS env vars are set (plain TCP otherwise).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
# Auth: consume the standalone DPoP/Solid-OIDC verifier as a git dependency — do NOT reimplement.
# The verifier's M2 landed the DNS-pinned SSRF-guarded network adapters (`NetworkJwksProvider` +
# `NetworkWebIdResolver` over `SafeFetcher`); we enable its `network` feature so the binary performs
# REAL OIDC discovery / JWKS fetch / WebID resolution against the live IdP. The middleware itself
# stays issuer-agnostic + seam-based, so unit tests still drive the verification CORE via the
# in-memory test doubles. Pinned to an exact rev (not the floating default branch) for reproducible,
# security-reviewable builds; Cargo.lock is committed.
# Pinned to `b146253` — verifier `main`. This rev bumps the verifier's `hickory-resolver`
# (its async DNS-pinning SSRF resolver) `0.24 → 0.26.1`, which in turn lets THIS repo's Cargo.lock
# resolve the PATCHED `hickory-proto 0.26.1` — closing dependabot GHSA-q2qq-hmj6-3wpp (the O(n²)
# DNS name-compression DoS) on the server. The verifier's PUBLIC API is UNCHANGED — `Verifier::verify`
# and the `ReplayStore`/`JwksProvider`/`WebIdResolver` traits are identical; only the verifier's
# internal `src/net.rs` DNS-resolver construction migrated to the new hickory API — so this server's
# code compiles unchanged. Inherits everything from prior revs: (a) the `ReplayStore::contains()`
# read-only existence probe (a REQUIRED trait method — every impl here provides it) and (b) the
# `mark()`/`contains()` STALE-NOW security fix (clock sampled AFTER the lock, closing the
# lock-contention expiry-misread window), supersedes `242d812` (replay-TTL widening, inherited),
# `836899d` (async-DNS + concurrent resolver), and `5ab600e` (contains() + stale-now). The iat
# acceptance window (which the CTH's future-skewed proof relies on) is unchanged. `contains()` is an
# OPTIMIZATION-only seam for the (separately-held) opt-4 jti-precheck; it is NOT yet wired into this
# server's auth path — implemented to satisfy the trait + carry the security fix.
# NB: `hickory-resolver 0.26.1` declares MSRV `rust-version = 1.88`, so this crate's `rust-version`
# is bumped to `1.88` to match (local toolchain is 1.89).
# FOLLOW-UP: re-pin to a tagged release once the verifier cuts one.
solid-oidc-verifier = { git = "https://github.com/jeswr/solid-oidc-verifier", rev = "b14625339333daa7ab932687c5b7f64c9b1ecba5", features = ["network"] }
# EMBEDDED SPARQ (opt-in `embedded-sparq` feature): the SPARQ query engine consumed DIRECTLY as a
# library (NOT over its HTTP service) for the in-process data path. `sparq-core` gives the
# `Graph` store (`load_str`/`open`/`save`/`apply_delta`) and `sparq-engine` the query/update
# entry points (`query_json`/`ask`/`update_in_place` with full named-graph `GRAPH <g> { … }`
# support — the engine preserves named graphs, fixing the HTTP store's DEVIATION-1). Pinned to an
# exact `jeswr/sparq` rev (git+https, NOT git+ssh) for reproducible, security-reviewable builds;
# Cargo.lock is committed. OFF by default so the standard build, tests, and conformance are
# byte-identical and carry NO sparq dependency unless an operator opts in. FOLLOW-UP: re-pin to a
# tagged release once sparq cuts one.
# `mmap` enables `Graph::open`/`save` (the directory-backed persistence seam — memory-mapped
# on-disk indexes); without it only the in-memory path is available. The default `parallel` feature
# rides along (parallel index build).
sparq-core = { git = "https://github.com/jeswr/sparq", rev = "98259ecdd66ff87683bca482fbc8ee786c4328a8", features = ["mmap"], optional = true }
sparq-engine = { git = "https://github.com/jeswr/sparq", rev = "98259ecdd66ff87683bca482fbc8ee786c4328a8", optional = true }
# RDF parse/serialise: oxttl (Turtle/N-Triples) + oxjsonld (JSON-LD ↔ RDF), via oxrdf model (spike §4).
# oxttl 0.2 + oxjsonld 0.2 both pin `oxrdf =0.3.3`, so this is a coherent Oxigraph set.
oxrdf = "0.3"
oxttl = "0.2"
oxjsonld = "0.2"
# Blob storage seam: object_store gives one trait over S3/GCS/Azure/Local (spike §4).
object_store = "0.13"
# Async trait support for the Store / SparqClient / BlobStore seams.
async-trait = "0.1"
bytes = "1"
http = "1"
# Live SPARQ HTTP client (M3): a SPARQL 1.1 Protocol client over the SPARQ /sparql endpoint. Built
# on the hyper 1.x client + hyper-util's legacy pooled Client — both ALREADY in the tree (axum +
# the verifier pull them in), so this adds NO new crates, only enables already-resolved client
# features. Plain HTTP to a trusted internal endpoint; TLS is an M3-next adapter behind the same type.
hyper = { version = "1", features = ["client", "http1"] }
# `server-auto` + `server-graceful` name the `hyper_util::server::conn::auto::Builder` + `TokioTimer`
# the transport DoS-hardening (`transport.rs`) configures (HTTP/2 max-concurrent-streams + rapid-reset
# cap, the slowloris header-read timeout, keep-alive). These features are ALREADY resolved in the tree
# (axum + axum-server pull `server-auto`), so naming them here adds NO new crate — it only makes the
# already-compiled builder + timer nameable from this crate's serve path.
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cryptographically-strong OS randomness for the unique-per-write blob-key suffix (the root fix that
# retires the deterministic-key race class — see `store::CompositeStore::mint_blob_key`). `getrandom`
# is the de-facto OS-RNG crate and is ALREADY resolved in the non-dev tree (transitively via
# rustls/ring + oxrdf's rand stack), so naming it directly at the same 0.2 line adds NO new crate —
# it only makes the existing dep callable from our own code. We deliberately depend on `getrandom`
# directly rather than a higher-level `rand`/`uuid`: the suffix is just 16 random bytes, so the raw
# OS entropy source is the minimal, audit-small surface for the job.
getrandom = "0.2"
# Round-3 verified-access-token cache (`auth_cache`): `sha2` for the SHA-256 cache key (full-token
# hash) + the DPoP `ath` value, `base64` (URL-safe, no pad) for the `ath`/thumbprint encodings, and
# `url` to normalise the DPoP `htu` the SAME way the verifier does (strip query/fragment, normalise
# default ports). All three are ALREADY resolved in the non-dev tree (transitively via
# `solid-oidc-verifier`: `sha2`/`base64` for its thumbprint/ath, `url` for its WebID/SSRF URL
# parsing), so naming them directly at the same versions adds NO new crate — it only makes the
# existing deps callable from this server's own cache code. The cache reuses the verifier's PUBLIC
# crypto/thumbprint/replay primitives (R1: it does not reimplement verification — see `auth_cache`).
sha2 = "0.10"
base64 = "0.22"
url = "2"
# Distributed (shared) DPoP `jti` replay store — the horizontal-scaling enabler (`src/redis_replay.rs`).
# Behind the OPT-IN `redis-replay` feature so the DEFAULT build/conformance is byte-identical and adds
# NO new crate unless an operator wants the shared store. We use the SYNCHRONOUS (blocking) `redis`
# client + its `r2d2` connection-pool feature on purpose: `ReplayStore::mark` is a sync trait method
# called from inside the axum runtime, so we run all Redis I/O on a DEDICATED OS THREAD (mirroring the
# verifier's `net.rs` off-runtime pattern) — a blocking client + blocking pool fits that thread with no
# "runtime within a runtime" hazard. `redis` is BSD-3-Clause (allowed by deny.toml). No async runtime
# features are enabled (default-features = false), keeping the dep surface to the blocking client + r2d2.
redis = { version = "1", default-features = false, features = ["r2d2"], optional = true }
r2d2 = { version = "0.8", optional = true }

[dev-dependencies]
# Mint test JWS access tokens + DPoP proofs for the auth-middleware unit tests (mirrors the
# verifier crate's own test helpers — ES256 keys + RFC 7638 thumbprint).
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1"
# The HttpSparqClient unit tests run against an in-process mock SPARQL endpoint (an axum server on a
# tokio listener) — no live SPARQ. `net` for the listener, `rt-multi-thread` so the client + server
# run on the same multi-threaded runtime, `time` for the timeout test.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"] }
http-body-util = "0.1"
# The (default-`#[ignore]`d) live TLS handshake test drives a rustls client against the axum-server
# HTTPS listener. tokio-rustls is the canonical rustls+tokio adapter and is ALREADY in the resolved
# tree (pulled in transitively by axum-server's tls-rustls feature), so this adds NO new crate —
# it only makes the existing dep nameable from the test. Matches the in-tree rustls 0.23 / aws-lc-rs.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
# The (default-`#[ignore]`d) live WebSocketChannel2023 handshake test drives a real WebSocket client
# against the bound axum `…/receive` endpoint. tokio-tungstenite is ALREADY in the resolved tree
# (pulled in by axum's `ws` feature), so naming it here adds NO new crate to the build. `futures-util`
# provides the Sink/Stream combinators (`SinkExt`/`StreamExt`) for the client socket; it too is
# already transitively present (tokio-tungstenite + axum depend on it).
tokio-tungstenite = "0.29"
futures-util = "0.3"
# The live WS test's HTTP client (subscribe POST + the PUT) AND the round-2 authenticated load client
# (`examples/auth_load.rs`). reqwest is ALREADY in the resolved tree (the verifier's `network` feature
# pulls it in for OIDC/JWKS/WebID fetches with `rustls-tls`), so naming these features here adds NO new
# crate — `rustls-tls` is already resolved. `rustls-tls` is required so the auth load client can speak
# HTTPS to the bench server's self-signed localhost listener; `json` for the WS test. `http2` lets the
# ALPN test (`tests/tls_handshake.rs`) drive a REAL HTTP/2 request and assert the response is served
# over h2 (not just negotiated) — it only enables already-resolved deps (`h2`, `hyper/http2`,
# `hyper-util/http2` are all in the tree via axum-server), so it adds NO new crate. Used ONLY in
# default-`#[ignore]`d tests + the auth-load example (never the server binary).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
# The (default-`#[ignore]`d) transport DoS-hardening regression tests (`tests/transport_dos.rs`) drive
# RAW HTTP/2 frames — opening streams and bursting RST_STREAM (the CVE-2023-44487 rapid-reset attack) —
# which a high-level client (reqwest) cannot express. `h2` is the canonical low-level HTTP/2 client and
# is ALREADY in the resolved tree (pulled in by reqwest/hyper's http2), so naming it as a dev-dependency
# adds NO new crate to the build. `bytes` (its body buffer type) is likewise already resolved. Used ONLY
# in the default-`#[ignore]`d adversarial tests, never the server binary.
h2 = "0.4"

[features]
default = []
# Opt-in: compile the distributed Redis-backed DPoP-`jti` replay store (`src/redis_replay.rs`) + its
# `redis`/`r2d2` deps. OFF by default so the standard build, tests, and conformance are byte-identical
# and carry no extra dependency. Enable for a horizontally-scaled deployment that shares one replay set
# across instances (set `SOLID_SERVER_REPLAY_REDIS_URL` at runtime to actually select it).
redis-replay = ["dep:redis", "dep:r2d2"]
# Opt-in: compile the IN-PROCESS embedded SPARQ data-path backend (`src/store/embedded.rs`) +
# its `sparq-core`/`sparq-engine` git deps. OFF by default so the standard build, tests, and
# conformance are byte-identical and carry NO sparq dependency. Enable to select the engine as a
# library (PSS_SPARQ_BACKEND=embedded at runtime) instead of the HTTP service or the in-memory
# double. See [`solid_server_rs::store::embedded`] and decisions/0001-embed-sparq-in-process.md.
embedded-sparq = ["dep:sparq-core", "dep:sparq-engine"]
